--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/http-errors": "^1.6.1",
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.2",
+    "eslint": "^5.16.0",
     "ts-node-dev": "^1.0.0-pre.39",
     "typescript": "^3.4.5"
   }
