--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "docker:build": "docker build -t jjpaters/feed-me-api .",
     "docker:run": "docker run -p 3000:3000 jjpaters/feed-me-api",
-    "dev": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
+    "dev": "ts-node-dev --inspect --respawn --transpileOnly ./src/app.ts",
     "prod": "node dist/app.js",
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,14 +19,17 @@
     "debug": "^4.1.1",
     "express": "^4.17.0",
     "http-errors": "^1.7.2",
+    "mongoose": "^5.5.10",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.1",
     "@types/http-errors": "^1.6.1",
+    "@types/mongoose": "^5.5.1",
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.2",
+    "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "ts-node-dev": "^1.0.0-pre.39",
     "typescript": "^3.4.5"
