--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,12 @@ workflows:
       - build:
           requires:
             - install_dependencies
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
 
 #############################################################
 # Define jobs
@@ -37,3 +43,12 @@ jobs:
       - checkout
       - run: npm install
       - run: npm run build
+  deploy:
+    docker:
+      - image: buildpack-deps:trusty
+    steps:
+      - checkout
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
