--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha ./tests --recursive"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,6 +18,10 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.0"
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.0",
+    "really-need": "^1.9.2",
+    "supertest": "^4.0.2"
   }
 }
