--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "main": "app.js",
   "scripts": {
+    "code-coverage": "npm test && nyc report --reporter=text-lcov | coveralls",
     "dev": "nodemon app.js",
     "start": "node ./bin/www",
-    "test": "mocha ./tests --recursive"
+    "test": "nyc mocha ./tests --recursive"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -19,8 +20,11 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "coveralls": "^3.0.3",
     "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.0",
+    "nyc": "^14.1.1",
     "really-need": "^1.9.2",
     "supertest": "^4.0.2"
   }
