--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
       - image: node:10.15-slim
     steps:
       - checkout
+      - run: npm install
       - run:
           name: Run unit tests
           command: npm run code-coverage
