--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,13 @@ jobs:
       - image: node:10.15-slim
     steps:
       - checkout
+      - restore_cache:
+          key: v1-{{ checksum "package.json" }}
       - run: npm install
+      - save_cache:
+          key: v1-{{ checksum "package.json" }}
+          paths:
+            - node_modules
       - run:
           name: Run unit tests
           command: npm run code-coverage
