--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "main": "app.js",
   "scripts": {
+    "code-coverage": "npm test && ./node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls",
     "dev": "nodemon app.js",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "./node_modules/.bin/nyc ./node_modules/.bin/mocha ./tests --recursive"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,6 +19,13 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.0"
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.3",
+    "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.19.0",
+    "nyc": "^14.1.1",
+    "really-need": "^1.9.2",
+    "supertest": "^4.0.2"    
   }
 }
