--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "code-coverage": "npm test && ./node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls",
-    "dev": "nodemon app.js",
+    "dev": "nodemon ./bin/www",
     "start": "node ./bin/www",
     "test": "./node_modules/.bin/nyc ./node_modules/.bin/mocha ./tests --recursive"
   },
@@ -16,16 +16,18 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "mongoose": "^5.5.11",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.3",
+    "dotenv": "^8.0.0",
     "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.0",
     "nyc": "^14.1.1",
     "really-need": "^1.9.2",
-    "supertest": "^4.0.2"    
+    "supertest": "^4.0.2"
   }
 }
