--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
+    "express-jwt": "^5.3.1",
+    "jwks-rsa": "^1.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.5.11",
     "morgan": "~1.9.1"
   },
