--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   "main": "app.js",
   "scripts": {
     "code-coverage": "npm test && ./node_modules/.bin/nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls",
-    "dev": "nodemon ./bin/www",
+    "dev": "nodemon --inspect ./bin/www",
     "start": "node ./bin/www",
     "test": "./node_modules/.bin/nyc ./node_modules/.bin/mocha ./tests --recursive"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
@@ -22,7 +21,8 @@
     "jwks-rsa": "^1.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.5.11",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
