--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,40 +22,11 @@ workflows:
 # Define jobs
 #############################################################
 jobs:
-  install_dependencies:
-    working_directory: ~/app
+  build:
     docker:
-      - image: node:10.15-slim
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-{{ checksum "package.json" }}
-      - run: npm install
-      - save_cache:
-          key: v1-{{ checksum "package.json" }}
-          paths:
-            - node_modules
-  unit_tests:
-    docker:
-      - image: node:10.15-slim
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-{{ checksum "package.json" }}
-      - run: npm install
-      - save_cache:
-          key: v1-{{ checksum "package.json" }}
-          paths:
-            - node_modules
-      - run:
-          name: Run unit tests
-          command: npm run code-coverage
-  deploy:
-    docker:
-      - image: buildpack-deps:trusty
+      - image: mcr.microsoft.com/dotnet/core/sdk:3.1
     steps:
       - checkout
       - run:
-          name: Deploy Master to Heroku
-          command: |
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+          name: Build solution
+          command: dotnet build
