--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,11 @@ workflows:
   version: 2
   pipeline:
     jobs:
-      - install_dependencies
-      - unit_tests:
+      - build
+      - unit_tests
+      - build_image:
           requires:
-            - install_dependencies
-      - deploy:
-          requires:
+            - build
             - unit_tests
           filters:
             branches:
@@ -30,3 +29,21 @@ jobs:
       - run:
           name: Build solution
           command: dotnet build
+
+  unit_tests:
+    docker:
+      - image: mcr.microsoft.com/dotnet/core/sdk:3.1
+    steps:
+      - checkout
+      - run:
+          name: Build solution
+          command: dotnet test
+
+  build_image:
+    docker:
+      - image: mcr.microsoft.com/dotnet/core/sdk:3.1
+    steps:
+      - checkout
+      - run:
+          name: Build solution
+          command: docker build -t feed-me-api .
