--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
 
   build_image:
     docker:
-      - image: mcr.microsoft.com/dotnet/core/sdk:3.1
+      - image: docker:18.09.3-ce
     steps:
       - checkout
       - run:
