--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  aws-cli: circleci/aws-cli@0.1.19
+
 #############################################################
 # Define workflows
 #############################################################
@@ -41,6 +44,7 @@ jobs:
       - image: docker:17.05.0-ce-git 
     steps:
       - checkout
+      - setup_remote_docker
       - run:
           name: Build solution
           command: docker build -t feed-me-api .
