--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,10 @@
 version: 2.1
 
-orbs:
-  aws-cli: circleci/aws-cli@1.0.0
-
 #############################################################
 # Define workflows
 #############################################################
 workflows:
   version: 2
-  aws-cli:
   pipeline:
     jobs:
       - install_dependencies
@@ -54,13 +50,31 @@ jobs:
           paths:
             - dist
   deploy:
-    context: aws
     docker:
-      - image: buildpack-deps:trusty
+      - image: docker:17.05.0-ce-git
     steps:
       - checkout
       - attach_workspace:
           at: .
       - run:
+          name: Install bash and curl
+          command: |
+            apk update
+            apk add -y curl
+            apk add -y bash
+            apk update
+            apk upgrade
+      - run:
+          name: Install CLI
+          command: |
+            apk add --update python python-dev py-pip build-base
+            pip install awscli
+      - run:
+          name: Set Credentials
+          command: |          
+            aws configure set region us-east-1
+            aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+            aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+      - run:
           name: Deploy AWS Lambda
-          command: aws update-function-code --function-name feed-me-lambda --zip-file function.zip
+          command: aws update-function-code --function-name explore-detroit-crud --zip-file function.zip
