--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "dev": "npm run build && npm start",
     "lint": "tslint --project .",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prep": "npm run build && npm run lint"
   },
+  "precommit": [
+    "build",
+    "lint"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jjpaters/feed-me-api.git"
@@ -23,6 +28,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.51",
     "@types/node": "^13.13.4",
+    "pre-commit": "^1.2.2",
     "ts-node": "^8.9.1",
     "tslint": "^6.1.2",
     "typescript": "^3.8.3"
