Switch to dotnet

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,17 +7,12 @@ workflows:
   version: 2
   pipeline:
     jobs:
-      - install_dependencies
-      - lint:
-          requires:
-            - install_dependencies
-      - build:
-          requires:
-            - install_dependencies
+      - build
+      - test
       - deploy:
           requires:
             - build
-            - lint
+            - test
           filters:
             branches:
               only:
@@ -27,40 +22,29 @@ workflows:
 # Define jobs
 #############################################################
 jobs:
-  install_dependencies:
-    working_directory: ~/app
-    docker:
-      - image: circleci/node:10
-    steps:
-      - checkout
-      - restore_cache:
-          key: v1-{{ checksum "package.json" }}
-      - run: npm install
-      - save_cache:
-          key: v1-{{ checksum "package.json" }}
-          paths:
-            - node_modules
-  lint:
-    working_directory: ~/app
-    docker:
-      - image: circleci/node:10
-    steps:
-      - checkout
-      - run: npm install
-      - run: npm run lint
   build:
     working_directory: ~/app
     docker:
-      - image: circleci/node:10
+      - image: mcr.microsoft.com/dotnet/core/sdk:3.1
     steps:
       - checkout
-      - run: npm install
-      - run: chmod +x pack.sh
-      - run: ./pack.sh
-      - persist_to_workspace:
-          root: .
-          paths:
-            - dist
+      - run:
+          name: "Build solution"
+          command: dotnet build --configuration Release
+
+  test:
+    working_directory: ~/app
+    docker:
+      - image: mcr.microsoft.com/dotnet/core/sdk:3.1
+    steps:
+      - checkout
+      - run:
+          name: "Install project dependencies"
+          command: dotnet restore
+      - run:
+          name: "Run unit tests"
+          command: dotnet test
+
   deploy:
     docker:
       - image: docker:17.05.0-ce-git
