--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,7 @@ jobs:
             apk update
             apk add -y curl
             apk add -y bash
+            apk add -y zip
             apk update
             apk upgrade
       - run:
