--- a/FeedMeApi/FeedMeApi.csproj
+++ b/FeedMeApi/FeedMeApi.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.100.1" />
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
+    <PackageReference Include="AWSXRayRecorder.Handlers.AspNetCore" Version="2.7.1" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Properties\launchSettings.json">
