--- a/FeedMeApi/appsettings.Development.json
+++ b/FeedMeApi/appsettings.Development.json
@@ -1,6 +1,9 @@
 {
   "AWS": {
-    "Region": "us-east-1"
+    "Region": "us-east-1",
+    "Cognito": {
+      "IdentityPoolId": "us-east-1:7ef1a4f4-4206-4abd-bbad-4dc841db3d68"
+    }
   },
   "AllowOrigins": "http://localhost:4200"
 }
