--- a/FeedMeApi/appsettings.Development.json
+++ b/FeedMeApi/appsettings.Development.json
@@ -5,5 +5,8 @@
       "IdentityPoolId": "us-east-1:7ef1a4f4-4206-4abd-bbad-4dc841db3d68"
     }
   },
-  "AllowOrigins": "http://localhost:4200"
+  "AllowOrigins": "http://localhost:4200",
+  "ConnectionStrings": {
+    "FeedMeContext": "Server=localhost;Database=FeedMe;uid=root;password=password"
+  }
 }
