--- a/FeedMeApi/appsettings.json
+++ b/FeedMeApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information"
     }
   },
-  "AllowOrigins": "https://feed-me.io"
+  "AllowOrigins": "https://feed-me.io",
+  "ConnectionStrings": {
+    "FeedMeContext": "#{FeedMeConnectionString}#"
+  }
 }
