Test cognito settings

--- a/FeedMeApi/appsettings.Development.json
+++ b/FeedMeApi/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "AWS": {
     "Region": "us-east-1",
-    "Cognito": {
-      "IdentityPoolId": "us-east-1:7ef1a4f4-4206-4abd-bbad-4dc841db3d68"
-    }
+    "UserPoolId": "us-east-1_lYLxsxHLD",
+    "UserPoolClientId": "20ecpaufcj7kbc3u7jndc1b27r",
+    "UserPoolClientSecret": "3op4vg1hlpgqr8r6g5amq9dsc32vqe5r6ppkr3sio0k9euvp0a6"
   },
   "AllowOrigins": "http://localhost:4200",
   "ConnectionStrings": {
