--- a/FeedMeApi/FeedMeApi.csproj
+++ b/FeedMeApi/FeedMeApi.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
-    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.1.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.1.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
     <PackageReference Include="AWSXRayRecorder.Handlers.AspNetCore" Version="2.7.1" />
-    <PackageReference Include="AWSSDK.Extensions.CognitoAuthentication" Version="0.9.4" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.20" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.21" />
+    <PackageReference Include="Amazon.AspNetCore.Identity.Cognito" Version="1.0.5" />
+    <PackageReference Include="Amazon.Extensions.CognitoAuthentication" Version="1.0.4" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Properties\launchSettings.json">
