--- a/FeedMe.Api/appsettings.json
+++ b/FeedMe.Api/appsettings.json
@@ -3,5 +3,10 @@
     "LogLevel": {
       "Default": "Information"
     }
+  },
+  "AWS": {
+    "Region": "#{AWS_REGION}#",
+    "UserPoolClientId": "#{AWS_USERPOOL_CLIENT_ID}#",
+    "UserPoolId": "#{AWS_USERPOOL_ID}#"
   }
 }
