--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,12 +26,13 @@ jobs:
   build:
     working_directory: ~/app
     docker:
-      - image: public.ecr.aws/lambda/dotnet:core3.1
+      - image: mcr.microsoft.com/dotnet/core/sdk:3.1
     steps:
       - checkout
       - run:
           name: Build Solution
           command: |
+            export PATH="$PATH:/root/.dotnet/tools"
             dotnet tool install -g Amazon.Lambda.Tools
             dotnet lambda package -pl ./FeedMe.Api -o ./package/lambda.zip -c Release -f netcoreapp3.1
       - persist_to_workspace:
