--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,11 +30,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Build Solution
+          name: Install Build Dependencies
           command: |
+            apk add -y zip
             export PATH="$PATH:/root/.dotnet/tools"
             dotnet tool install -g Amazon.Lambda.Tools
-            dotnet lambda package -pl ./FeedMe.Api -o ./package/lambda.zip -c Release -f netcoreapp3.1
+      - run:
+          name: Build Solution
+          command: dotnet lambda package -pl ./FeedMe.Api -o ./package/lambda.zip -c Release -f netcoreapp3.1
       - persist_to_workspace:
           root: .
           paths:
