--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ workflows:
       - build
       - test
       - deploy:
+          context: AWS
           requires:
             - build
             - test
