--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs: 
+  coveralls: coveralls/coveralls@1.0.6
+
 #############################################################
 # Define workflows
 #############################################################
@@ -58,7 +61,8 @@ jobs:
           command: dotnet restore
       - run:
           name: Run Unit Tests
-          command: dotnet test
+          command: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+      - coveralls/upload
 
   deploy:
     docker:
