--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,15 +57,13 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install Test Dependencies
-          command: |
-            apt-get update && apt-get -y install nodejs
-      - run:
           name: Restore Project Dependencies
           command: dotnet restore
       - run:
           name: Run Unit Tests
-          command: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+          command: |
+            apt-get update && apt-get -y install nodejs
+            dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
       - coveralls/upload
 
   deploy:
