install compatible ver

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
       - run:
           name: Run Unit Tests
           command: |
-            dotnet tool install -g coveralls.net
+            dotnet tool install -g coveralls.net --version 2.0.0
             dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
             csmacnz.Coveralls --opencover -i FeedMe.Api.Tests/coverage.opencover.xml --useRelativePaths
 
