Remove files; upload unit tests (#31)
* Remove files; upload unit tests

* Install nodejs

* Update npm

* install npm

* find path

* remove orb

* remove orb

* install compatible ver

* add path

Co-authored-by: jpaterson <JustinPaterson@quickenloans.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
             chmod +x environment-variables.sh
             ./environment-variables.sh
       - run:
-          name: Install Build Dependencies and Build
+          name: Install Build Dependencies and Package Build
           command: |
             apt-get update && apt-get -y install zip
             export PATH="$PATH:/root/.dotnet/tools"
@@ -54,11 +54,15 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install Project Dependencies
+          name: Restore Project Dependencies
           command: dotnet restore
       - run:
           name: Run Unit Tests
-          command: dotnet test
+          command: |
+            export PATH="$PATH:/root/.dotnet/tools"
+            dotnet tool install -g coveralls.net --version 2.0.0
+            dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+            csmacnz.Coveralls --opencover -i FeedMe.Api.Tests/coverage.opencover.xml --useRelativePaths
 
   deploy:
     docker:
