Switch to Auth0

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ workflows:
             branches:
               only:
                 - main
+                - user-recipe-repositories
 
 #############################################################
 # Define jobs
