--- a/FeedMe.Api/appsettings.Development.json
+++ b/FeedMe.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
-  "AWS": {
-    "Region": "us-east-2",
-    "UserPoolClientId": "",
-    "UserPoolId": ""
+  "Auth0": {
+    "Authority": "https://feed-me-np.us.auth0.com/",
+    "Domain": "feed-me-np.us.auth0.com",
+    "Audience": "https://feed-me.io/api"
   }
 }
