--- a/FeedMe.Api/appsettings.json
+++ b/FeedMe.Api/appsettings.json
@@ -4,9 +4,9 @@
       "Default": "Information"
     }
   },
-  "AWS": {
-    "Region": "#{AWS_REGION}#",
-    "UserPoolClientId": "#{AWS_USERPOOL_CLIENT_ID}#",
-    "UserPoolId": "#{AWS_USERPOOL_ID}#"
+  "Auth0": {
+    "Authority": "https://feed-me-np.us.auth0.com/",
+    "Domain": "feed-me-np.us.auth0.com",
+    "Audience": "https://feed-me.io/api"
   }
 }
