Update to nosql

--- a/FeedMe.Api/appsettings.Development.json
+++ b/FeedMe.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
-  "AWS": {
-    "Region": "us-east-2",
-    "UserPoolClientId": "",
-    "UserPoolId": ""
-  }
+  "Auth": {
+    "Authority": "https://feed-me-np.us.auth0.com/",
+    "Audience": "https://feed-me.io/api"
+  },
+  "DatabaseUri": "localhost:8000"
 }
