--- a/FeedMe.Api/appsettings.json
+++ b/FeedMe.Api/appsettings.json
@@ -4,9 +4,9 @@
       "Default": "Information"
     }
   },
-  "AWS": {
-    "Region": "#{AWS_REGION}#",
-    "UserPoolClientId": "#{AWS_USERPOOL_CLIENT_ID}#",
-    "UserPoolId": "#{AWS_USERPOOL_ID}#"
-  }
+  "Auth": {
+    "Authority": "#{AUTH_AUTHORITY}#",
+    "Audience": "#{AUTH_AUDIENCE}#"
+  },
+  "DatabaseUri": "#{DATABASE_URI}#"
 }
