--- a/FeedMe.Api/FeedMe.Api.csproj
+++ b/FeedMe.Api/FeedMe.Api.csproj
@@ -11,8 +11,18 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.22" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.2.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.28" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Controllers\Recipes\" />
+    <None Remove="Amazon.AspNetCore.Identity.Cognito" />
+    <None Remove="Amazon.Extensions.CognitoAuthentication" />
+    <None Remove="AWSSDK.CognitoIdentityProvider" />
+    <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\Recipes\" />
   </ItemGroup>
 </Project>
