--- a/FeedMe.Api/Properties/launchSettings.json
+++ b/FeedMe.Api/Properties/launchSettings.json
@@ -18,16 +18,17 @@
     "FeedMe.Api": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "http://localhost:31497",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      }
     },
     "Mock Lambda Test Tool": {
       "commandName": "Executable",
+      "executablePath": "%USERPROFILE%\\.dotnet\\tools\\dotnet-lambda-test-tool-3.1.exe",
       "commandLineArgs": "--port 5050",
       "workingDirectory": ".\\bin\\$(Configuration)\\netcoreapp3.1",
-      "executablePath": "%USERPROFILE%\\.dotnet\\tools\\dotnet-lambda-test-tool-3.1.exe"
+      "environmentVariables": {}
     }
   }
 }
